'sj-动态设置提示文字'

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		app:sbv_scanf_line_margin_top="24dp"
-		app:sbv_screen_full="true" />
+		app:sbv_screen_full="false"
+		app:sbv_top_offset="300dp" />
 	
 	<ImageButton
 		android:id="@+id/ibtnMainStartScanf"
